# fingerprint-arduino

./: .gitignore  .gitmessage  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  FILE_ORGANIZATION_CHANGES.md  LICENSE.txt  README.md  VERSIONING_SETUP_SUMMARY.md
docs/: CHANGELOG_WORKFLOW.md  CHANGES.md  CMakeLists.txt  README.md  USAGE.md  VERSIONING.md  doxygen.cfg  protocol.md
exports/: README.md
include/: CMakeLists.txt  serialport.hpp  version.h
scripts/: bump-version.sh  changelog-helper.sh  regenerate-docs.sh  release.sh
src/: CMakeLists.txt  FingerPrint_Enroll.ino  main.cpp  serialport.cpp
